:art: fix https://github.com/siyuan-note/siyuan/issues/7121

--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -573,6 +573,7 @@
   "--b3-protyle-inline-blockref-color": "Block Ref",
   "sync": "Sync",
   "syncNow": "Sync now",
+  "waitSync": "The editing data has not been synchronized to the cloud",
   "cloudBook": "Cloud Notebook",
   "paymentSum": "Cumulatively paid",
   "refresh": "Refresh",
