:art: 嵌入块支持搜索 https://github.com/siyuan-note/siyuan/issues/7112

--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -393,6 +393,7 @@
   "math": "Formula Block",
   "listItem": "List item",
   "superBlock": "Super block",
+  "embedBlock": "Embed block",
   "expand": "Expand",
   "showDock": "Show Dock",
   "hideDock": "Hide Dock",
@@ -574,7 +575,6 @@
   "sync": "Sync",
   "syncNow": "Sync now",
   "waitSync": "The editing data has not been synchronized to the cloud",
-  "cloudBook": "Cloud Notebook",
   "paymentSum": "Cumulatively paid",
   "refresh": "Refresh",
   "accountManage": "Account Manage",
