--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -393,6 +393,7 @@
   "math": "Bloque de fórmula",
   "listItem": "Elemento de la lista",
   "superBlock": "Superbloque",
+  "embedBlock": "Bloque incrustado",
   "expand": "Expandir",
   "showDock": "Mostrar Dock",
   "hideDock": "Ocultar Dock",
@@ -574,7 +575,6 @@
   "sync": "Sincronización",
   "syncNow": "Sincronizar ahora",
   "waitSync": "Los datos de edición no se han sincronizado con la nube",
-  "cloudBook": "Cuaderno de notas en la nube",
   "paymentSum": "Pagado acumulativamente",
   "refresh": "Actualizar",
   "accountManage": "Gestión de la cuenta",
