--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -393,6 +393,7 @@
   "math": "Bloc de formule",
   "listItem": "Élément de liste",
   "superBlock": "Superblock",
+  "embedBlock": "Bloc intégré",
   "expand": "Élargir",
   "showDock": "Montrer le Dock",
   "hideDock": "Cacher le  Dock",
@@ -574,7 +575,6 @@
   "sync": "Synchro",
   "syncNow": "Synchro maintenant",
   "waitSync": "Les données d'édition n'ont pas été synchronisées avec le cloud",
-  "cloudBook": "Carnet de notes du Cloud",
   "paymentSum": "Cumulativement payé",
   "refresh": "Rafraîchir",
   "accountManage": "Gestion des comptes",
