--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -393,6 +393,7 @@
   "math": "公式塊",
   "listItem": "列表項",
   "superBlock": "超級塊",
+  "embedBlock": "嵌入塊",
   "expand": "展開",
   "showDock": "顯示停靠欄",
   "hideDock": "隱藏停靠欄",
@@ -574,7 +575,6 @@
   "sync": "同步",
   "syncNow": "立即同步",
   "waitSync": "編輯數據尚未同步到雲端",
-  "cloudBook": "雲端筆記本",
   "payment": "累計已支付",
   "refresh": "重新整理",
   "accountManage": "帳號管理",
