--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -393,6 +393,7 @@
   "math": "公式块",
   "listItem": "列表项",
   "superBlock": "超级块",
+  "embedBlock": "嵌入块",
   "expand": "展开",
   "showDock": "显示停靠栏",
   "hideDock": "隐藏停靠栏",
@@ -574,7 +575,6 @@
   "sync": "同步",
   "syncNow": "立即同步",
   "waitSync": "编辑数据尚未同步到云端",
-  "cloudBook": "云端笔记本",
   "paymentSum": "累计已支付",
   "refresh": "刷新",
   "accountManage": "账号管理",
