--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -945,7 +945,7 @@
     "67": "Transféré à %s, téléchargé à %s",
     "68": "Les données locales ont dépassé la capacité de stockage maximale [%s] de l'espace cloud pendant la période d'essai, et les données ne peuvent plus être téléchargées. Après l'abonnement, la capacité de stockage cloud sera mise à niveau à 8GB",
     "69": "Téléchargement terminé",
-    "70": "La copie du carnet de notes [%s] du fichier [%s] a échoué : %s",
+    "70": "TODO",
     "71": "L'insertion du fichier asset a échoué, veuillez rouvrir le document.",
     "72": "Le contenu a été copié dans le presse-papiers du système, veuillez vous rendre sur SiYuan pour le coller.",
     "73": "En cours d'importation, veuillez patienter...",
