--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -945,7 +945,7 @@
     "67": "上传于 %s，下载于 %s",
     "68": "本地数据已超过试用期云端空间最大存储容量 [%s]，无法继续同步数据，<a target='_blank' href='https://ld246.com/subscribe/siyuan'>订阅</a>后云端存储容量将升级为 [8 GB]",
     "69": "下载完毕",
-    "70": "复制笔记本 [%s] 下的文件 [%s] 失败：%s",
+    "70": "TODO",
     "71": "插入资源文件失败，请重新打开文档",
     "72": "内容已经复制到系统剪切板，请到思源中进行粘贴",
     "73": "正在导入，请稍等...",
