--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -945,7 +945,7 @@
     "67": "上傳於 %s，下載於 %s",
     "68": "本地數據已超過試用期雲端空間最大存儲容量 [%s]，無法繼續同步數據，訂閱後雲端存儲容量將升級為 8GB",
     "69": "下載完畢",
-    "70": "TODO",
+    "70": "正在處理 [%s]，請稍等...",
     "71": "插入資料檔失敗，請重新打開文檔",
     "72": "內容已經複製到系統剪貼簿，請到思源中進行貼上",
     "73": "正在導入，請稍等...",
