--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -928,10 +928,10 @@
     "50": "Résolution des référence [%s]",
     "51": "Blocage du contenu du cache [%d]",
     "52": "Chaque fois que vous ouvrez le guide de l'utilisateur, les données du notebook seront réinitialisées, veuillez donc ne pas y enregistrer de données.",
-    "53": "L'indexation de [%d] documents est terminée, et [%d] restent à traiter.",
+    "53": "TODO",
     "54": "Indexation des références...",
     "55": "Références indexées de [%d] documents",
-    "56": "Indexé [%d] documents",
+    "56": "TODO",
     "57": "Échec de la création d'une clé temporaire",
     "58": "Une fois l'index reconstruit, l'interface sera automatiquement rafraîchie ultérieurement...",
     "59": "Échec de la définition de la liste des ignores de synchronisation",
@@ -968,7 +968,7 @@
     "90": "Création de [%d] index de recherche d'éléments de niveau bloc [%s]",
     "91": "Lecture des données de l'arborescence des blocs...",
     "92": "Analyse de l'arborescence du document [%s]",
-    "93": "Indexation de l'arborescence du document [%s]",
+    "93": "TODO",
     "94": "Échec du téléchargement : %s",
     "95": "Quitter le programme...",
     "96": "La synchronisation a échoué lors de la sortie. Veuillez effectuer une synchronisation manuellement pour vous assurer que les données locales sont cohérentes avec les données du cloud",
