--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -928,10 +928,10 @@
     "50": "正在解析引用 [%s]",
     "51": "正在缓存内容块 [%d]",
     "52": "每次打开用户指南笔记本数据都会被重置，所以请勿在其中保存任何数据",
-    "53": "已完成索引 [%d] 篇文档，剩余待处理 [%d]",
+    "53": "TODO",
     "54": "正在索引引用关系...",
     "55": "已完成索引 [%d] 篇文档的引用关系",
-    "56": "已完成索引 [%d] 篇文档",
+    "56": "TODO",
     "57": "创建临时密钥失败",
     "58": "重建索引完毕，稍后将自动刷新界面...",
     "59": "设置同步忽略列表失败",
@@ -968,7 +968,7 @@
     "90": "已经建立 [%d] 个块级元素的搜索索引 [%s]",
     "91": "正在读取块树数据...",
     "92": "正在解析文档树 [%s]",
-    "93": "正在索引文档树 [%s]",
+    "93": "TODO",
     "94": "上传失败：%s",
     "95": "正在退出...",
     "96": "退出时同步失败，请手动执行一次同步以确保本地数据和云端数据一致",
