编辑保护,如果设置密码,则从只读模式进入编辑模式需要密码

--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -91,6 +91,16 @@
   "editMode": "编辑模式",
   "editReadonly": "只读模式",
   "editReadonlyTip": "启用后编辑器将以只读模式载入文档，需要编辑时可点击顶栏编辑按钮切换到编辑模式",
+  "unlockEditProtect": "输入编辑密码",
+  "unlockTipWhenEnableEdit": "已开启编辑保护,需要输入密码才能进入编辑模式",
+  "unlockTipWhenSetEditPW": "已开启编辑保护,输入旧密码验证成功后才能修改密码",
+  "editPasswordWrong": "密码错误",
+  "editPasswordCorrect": "密码正确",
+  "setEditProtect": "设置编辑保护",
+  "setEditPassword": "设置编辑保护密码",
+  "setEditPasswordTip": "配置后作为编辑保护密码，留空则关闭编辑保护",
+  "editPasswordDeleted": "编辑密码已移除",
+  "setEditPasswordOK": "编辑密码设置成功",
   "generateConflictDoc": "同步冲突时生成冲突文档",
   "generateConflictDocTip": "启用后当同步发生冲突时会生成冲突文档，以便直接打开查看。无论是否启用，数据历史都会记录冲突文档",
   "deleteOpConfirm": "⚠️ 删除操作确认",
