--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,4 +1,13 @@
 {
+  "picgo": "是否开启 PicGo",
+  "picgoTip": "使用 PicGo 上传图片到图床,3种模式",
+  "configPicgo": "配置 PicGo",
+  "picgoServePath": "PicGo 伺服地址",
+  "picgoServePathTip": "设置PicGo伺服地址,默认值 http://127.0.0.1:36677",
+  "usePicgoConfirm": "是否使用PicGo上传图片到图床?",
+  "picgoMode0": "禁用",
+  "picgoMode1": "总是",
+  "picgoMode2": "询问",
   "plugin": "插件",
   "attrBookmarkTip": "将该块和一个书签进行关联，以便后续通过书签面板查看",
   "attrNameTip": "为该块设置命名，主要用于引用和搜索，一个块只能拥有一个唯一的命名",
