Squashed commit of the following:
commit a335101d49382de3db8981f6a2476435580c4bd6
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 12:53:33 2023 +0800

    :bookmark: Release v2.8.8

commit 6a6dec05f3b74e91254faa526ca71ed782fb2495
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 11:30:33 2023 +0800

    :memo: Update changelogs

commit a819656c0aa033234a61487a942fab534906778d
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 11:15:53 2023 +0800

    :memo: Update changelogs

commit 56a2c368d96de1e845ad3e287e566c4fc76a972b
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 11:11:54 2023 +0800

    :bug: Remove inconsistent scroll IAL

commit 8b6abec8e90b1518220e6178d51fab8ec6dc41e5
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 10:39:48 2023 +0800

    :art: Bazaar resource directories support symlink https://github.com/siyuan-note/siyuan/pull/8263

commit 945508682061a0db7b4f7be485ec135a4d88dc1b
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 10:35:46 2023 +0800

    :memo: Update changelogs

commit fdbfe6b8487cf5848332f3219f2b897d615ff1d1
Author: 颖逸 <49649786+Zuoqiu-Yingyi@users.noreply.github.com>
Date:   Tue May 16 10:34:38 2023 +0800

    Bazaar resource directories support symlink (#8263)

    * :art: bazaar resource directories support symlink

    * :art: bazaar resource directories support symlink

commit 85496345ef7b52e753ec247e5ced633232a8f66c
Author: Vanessa <lly219@gmail.com>
Date:   Tue May 16 10:31:01 2023 +0800

    :sparkles: enable plugin

commit f3d1acd166c1747d8522b276910a89da56723335
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 09:39:01 2023 +0800

    :memo: Update changelogs

commit bf4b88a00770fd130e0b174d27f7ce3b06836e75
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 09:38:50 2023 +0800

    :art: Plugin hot load

commit 516276db49388e7c1bf94ffa3de12b71431e003d
Author: Liang Ding <d@b3log.org>
Date:   Tue May 16 09:09:31 2023 +0800

    :art: Data sync connectivity check supports redirection Fix https://github.co

--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -1,4 +1,8 @@
 {
+  "confirmPassword": "Ya he recordado la contraseña",
+  "passwordNoMatch": "Las contraseñas ingresadas dos veces no coinciden",
+  "cloudConfigTip": "Configure en [Configuración - Nube]",
+  "confirmUninstall": "¿Está seguro de que desea desinstalar ${name}?",
   "scrollGetMore": "No se asuste... desplácese hacia arriba y hacia abajo para cargar más",
   "flashcardNewCard": "Nueva Tarjeta",
   "flashcardReviewCard": "Revisar Tarjeta",
@@ -632,11 +636,11 @@
   "account1": "Haga clic para suscribirse",
   "account2": "<div>Sincronización de datos cifrada de extremo a extremo</div><div>Copia de seguridad de datos cifrada de extremo a extremo</div><div>Activos en la nube que sirven</div>",
   "account3": "Suscripción de prueba",
-  "account4": "El precio de renovación se mantiene de por vida",
   "account5": "Alojamiento de activos en la nube",
   "account6": "Restante antes de que caduque la suscripción",
   "account7": "Más funciones avanzadas",
   "account8": "",
+  "account9": "",
   "account10": "Suscripción anual",
   "account11": "Hasta que finalice el descuento por pronto pago",
   "account12": "Compañero de vida",
