--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1,4 +1,8 @@
 {
+  "confirmPassword": "我已經牢記密碼了",
+  "passwordNoMatch": "兩次輸入的密碼不一致",
+  "cloudConfigTip": "請在 [設置 - 雲端] 中進行配置",
+  "confirmUninstall": "確定卸載 ${name} ？",
   "scrollGetMore": "不要驚慌...上下滾動即可加載更多內容",
   "flashcardNewCard": "新卡",
   "flashcardReviewCard": "複習卡",
@@ -632,11 +636,11 @@
   "account1": "點擊前往訂閱",
   "account2": "<div>端到端加密數據同步</div><div>端到端加密數據備份</div><div>資源文件圖床</div><div>定時微信提醒</div><div>收集箱</div>",
   "account3": "試用訂閱",
-  "account4": "續訂價格終身不變",
   "account5": "雲端圖床服務",
   "account6": "距訂閱過期還剩",
   "account7": "更多進階特性",
   "account8": "",
+  "account9": "",
   "account10": "年付訂閱",
   "account11": "早鳥優惠活動結束還剩",
   "account12": "相伴一生",
