--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,4 +1,8 @@
 {
+  "confirmPassword": "我已经牢记密码了",
+  "passwordNoMatch": "两次输入的密码不一致",
+  "cloudConfigTip": "请在 [设置 - 云端] 中进行配置",
+  "confirmUninstall": "确定卸载 ${name} ？",
   "scrollGetMore": "不要惊慌...上下滚动即可加载更多内容",
   "flashcardNewCard": "新卡",
   "flashcardReviewCard": "复习卡",
@@ -632,11 +636,11 @@
   "account1": "点击前往订阅",
   "account2": "<div>端到端加密数据同步</div><div>端到端加密数据备份</div><div>资源文件图床</div><div>定时微信提醒</div><div>收集箱</div>",
   "account3": "试用订阅",
-  "account4": "续订价格终身不变",
   "account5": "云端图床服务",
   "account6": "距订阅过期还剩",
   "account7": "更多高级特性",
-  "account8": "<div>\uD83C\uDFEB <a target='_black' href='https://ld246.com/article/1618844886264'>教育优惠申请</a></div>",
+  "account8": "<div>\uD83C\uDFEB <a target='_black' href='https://ld246.com/article/1618844886264'>教育优惠 6.4 折</a></div>",
+  "account9": "<div>\uD83D\uDD25 <a target='_black' href='https://ld246.com/subscribe/siyuan/batch'>两人团首年 6.4 折</a></div>",
   "account10": "年付订阅",
   "account11": "早鸟优惠活动结束还剩",
   "account12": "相伴一生",
