--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1,4 +1,8 @@
 {
+  "confirmPassword": "I have already remembered the password",
+  "passwordNoMatch": "The passwords entered twice do not match",
+  "cloudConfigTip": "Please configure in [Settings - Cloud]",
+  "confirmUninstall": "Are you sure you want to uninstall ${name}?",
   "scrollGetMore": "Don't panic... scroll up and down to load more",
   "flashcardNewCard": "New",
   "flashcardReviewCard": "Review",
@@ -389,7 +393,7 @@
   "includeSubFile": "\nInclude x subfiles",
   "untitled": "Untitled",
   "lockScreen": "Lock Screen",
-  "cloudIntro1": "End-to-end encrypted data synchronization",
+  "cloudIntro1": "End-to-end encrypted data sync",
   "cloudIntro2": "The encryption and decryption process is completely performed on the local device",
   "cloudIntro3": "The encryption algorithm is the industry-recognized safe AES GCM",
   "cloudIntro4": "The password set by the user is encrypted with the built-in key of the program and stored locally",
@@ -630,13 +634,13 @@
   "insertBottom": "Open Below the Tab",
   "insertRight": "Open Right the Tab",
   "account1": "Click to subscribe",
-  "account2": "<div>End-to-end encrypted data synchronization</div><div>End-to-end encrypted data backup</div><div>Cloud assets serving</div>",
+  "account2": "<div>End-to-end encrypted data sync</div><div>End-to-end encrypted data backup</div><div>Cloud assets serving</div>",
   "account3": "Trial Subscription",
-  "account4": "Renewal price remains unchanged for life",
   "account5": "Cloud assets hosting",
   "account6": "Remaining before subscription expires",
   "account7": "More advanced features",
   "account8": "",
+  "account9": "",
   "account10": "Annual subscription",
   "account11": "Until the end of the early bird discount",
   "account12": "Life companion",
