--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1,4 +1,8 @@
 {
+  "confirmPassword": "J'ai déjà retenu le mot de passe",
+  "passwordNoMatch": "Les mots de passe saisis deux fois ne correspondent pas",
+  "cloudConfigTip": "Veuillez configurer dans [Paramètres - Cloud]",
+  "confirmUninstall": "Êtes-vous sûr de vouloir désinstaller ${name} ?",
   "scrollGetMore": "Ne paniquez pas... faites défiler de haut en bas pour en charger plus",
   "flashcardNewCard": "Nouvelle carte",
   "flashcardReviewCard": "Revoir la carte",
@@ -632,11 +636,11 @@
   "account1": "Cliquez pour vous abonner",
   "account2": "<div>Synchronisation des données chiffrées de bout en bout</div><div>Sauvegarde des données chiffrées de bout en bout</div><div>Servant les ressources cloud</div>",
   "account3": "Abonnement d'essai",
-  "account4": "Le prix du renouvellement reste inchangé à vie",
   "account5": "Hébergement d'actifs cloud",
   "account6": "Restant avant l'expiration de l'abonnement",
   "account7": "Fonctions plus avancées",
   "account8": "",
+  "account9": "",
   "account10": "Abonnement annuel",
   "account11": "Jusqu'à la fin de la réduction pour les early bird",
   "account12": "Compagnon de vie",
