Revise Traditional Chinese language
修订部分名词常用语

--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -493,7 +493,7 @@
   "sub": "下標",
   "enter": "聚焦",
   "enterBack": "聚焦到上層",
-  "duplicate": "重複",
+  "duplicate": "複製",
   "turnInto": "轉換為",
   "split": "並排顯示",
   "underline": "底線",
