--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -762,7 +762,7 @@
   "export21": "導出 PDF 頁腳範本",
   "export22": "<code class='fn__code'>%page</code> 為當前頁碼，<code class='fn__code'>%pages</code> 為總頁碼，支持 Sprig 範本函數",
   "export23": "導出 Markdown 添加 YAML front-matter",
-  "export24": "啟用後在導出的 Markdown 文件開頭處添加一些較為通用的元資料訊息",
+  "export24": "啟用後在導出的 Markdown 文件開頭處添加一些較為通用的元資料資訊",
   "theme11": "淺色模式下使用主題",
   "theme12": "深色模式下使用主題",
   "theme2": "選擇外觀使用的圖示",
